--- a/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
+++ b/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
@@ -126,7 +126,8 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:onClick="calculateAndDisplayResults"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -136,7 +137,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="12">
+        android:layout_weight="12"
+        android:id="@+id/tableResults"
+        tools:ignore="Orientation">
 
 
     </LinearLayout>
