--- a/Stockers/app/src/main/res/layout/loan_calculator_result_table.xml
+++ b/Stockers/app/src/main/res/layout/loan_calculator_result_table.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--Row for Time To Pay Off-->
     <TableRow>
