--- a/Stockers/app/src/main/res/layout/contact_dialog.xml
+++ b/Stockers/app/src/main/res/layout/contact_dialog.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/contactList">
     </ListView>
+
 
 </LinearLayout>
