--- a/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
+++ b/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
@@ -127,7 +127,8 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:layout_gravity="center"
-        android:onClick="calculateAndDisplayResults"/>
+        android:onClick="calculateAndDisplayResults"
+        android:text="@string/calculate"/>
 
     <TextView
         android:layout_width="wrap_content"
