--- a/Stockers/app/src/main/res/layout/contact_view.xml
+++ b/Stockers/app/src/main/res/layout/contact_view.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10dp"
+    android:layout_gravity="center">
 
     <ImageView
         android:layout_width="50dp"
@@ -18,13 +20,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:id="@+id/contactName"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:id="@+id/emailAddress"/>
     </LinearLayout>
 </LinearLayout>
