--- a/Stockers/app/src/main/res/values/colors.xml
+++ b/Stockers/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#9FA8DA</color>
     <color name="colorPrimaryDark">#5C6BC0</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#4527A0</color>
 
 </resources>
