--- a/Stockers/app/src/main/res/layout/contact_dialog.xml
+++ b/Stockers/app/src/main/res/layout/contact_dialog.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/contactList">
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
