Add some minor styling to tables, more is needed

--- a/Stockers/app/src/main/res/values/styles.xml
+++ b/Stockers/app/src/main/res/values/styles.xml
@@ -5,4 +5,8 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TableThem">
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:la"
+    </style>
 </resources>
