--- a/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
+++ b/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
@@ -141,9 +141,8 @@
         android:layout_height="0dp"
         android:layout_weight="12"
         android:id="@+id/tableResults"
-        tools:ignore="Orientation">
-
-
+        android:layout_gravity="center"
+        android:orientation="horizontal">
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
