--- a/Stockers/app/src/main/res/layout/activity_financial_hints.xml
+++ b/Stockers/app/src/main/res/layout/activity_financial_hints.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Hints.FinancialHintsActivity">
+    android:orientation="vertical"
+    tools:context="com.dawson.jonat.stockers.Hints.FinancialHintsActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/hintsViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
