--- a/Stockers/app/src/main/res/layout/fragment_hints.xml
+++ b/Stockers/app/src/main/res/layout/fragment_hints.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Hints.HintsFragment">
 
     <TextView
         android:id="@+id/hintTV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="" />
+        android:layout_width="0dp"
+        android:layout_height="169dp"
+        android:layout_marginBottom="8dp"
+        android:text="wryhtrerejtszdha"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/learnMoreBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/learn_more" />
+        android:layout_marginBottom="64dp"
+        android:layout_marginStart="248dp"
+        android:text="@string/learn_more"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
