--- a/Stockers/app/src/main/res/layout/activity_note.xml
+++ b/Stockers/app/src/main/res/layout/activity_note.xml
@@ -14,6 +14,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
+        android:onClick="createNote"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="end|bottom"
