--- a/Stockers/app/src/main/res/values/colors.xml
+++ b/Stockers/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#9FA8DA</color>
     <color name="colorPrimaryDark">#5C6BC0</color>
     <color name="colorAccent">#4527A0</color>
+    <color name="textColor">#FFE0B2</color>
 
 </resources>
