--- a/Stockers/app/src/main/res/values/edit_text_style.xml
+++ b/Stockers/app/src/main/res/values/edit_text_style.xml
@@ -5,6 +5,8 @@
         <item name="android:maxLines">1</item>
         <item name="android:imeOptions">actionNext</item>
         <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:background">@drawable/rounded_border</item>
+        <item name="android:paddingLeft">3dp</item>
     </style>
 
 </resources>
