--- a/Stockers/app/src/main/res/layout/activity_messaging.xml
+++ b/Stockers/app/src/main/res/layout/activity_messaging.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Messaging.Messaging">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FFFFFFFFFFF"/>
 </android.support.constraint.ConstraintLayout>
