--- a/Stockers/app/src/main/res/layout/fragment_hints.xml
+++ b/Stockers/app/src/main/res/layout/fragment_hints.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="169dp"
         android:layout_marginBottom="8dp"
-        android:text="wryhtrerejtszdha"
+        android:text=""
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
