Add final layer of verification for the loancalculator Now the validation for the loan calculator is done in a seperate method, which will test to ensure that we can parse the input into a double, and if it can't, then an exception will be thrown and will be used to display a toast error to the user.

--- a/Stockers/app/src/main/res/values/styles.xml
+++ b/Stockers/app/src/main/res/values/styles.xml
@@ -1,7 +1,10 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme">
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="tableContent">
+       <item name="android:textSize">20sp</item>
     </style>
 </resources>
