--- a/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
+++ b/Stockers/app/src/main/res/layout/activity_loan_calculator.xml
@@ -137,7 +137,7 @@
 
     <!--Space that is dedicated to display the results-->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="12"
         android:id="@+id/tableResults"
