--- a/Stockers/app/src/main/res/layout/activity_about.xml
+++ b/Stockers/app/src/main/res/layout/activity_about.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_marginTop="60dp"
         android:layout_gravity="center">
         <TextView
             android:layout_width="wrap_content"
