--- a/Stockers/app/src/main/res/layout/activity_currency_exchange.xml
+++ b/Stockers/app/src/main/res/layout/activity_currency_exchange.xml
@@ -20,7 +20,8 @@
             android:id="@+id/amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/amount_hint" />
+            android:hint="@string/amount_hint"
+            android:inputType="numberDecimal" />
 
 
         <TextView
