--- a/Stockers/app/src/main/res/layout/activity_show_stock.xml
+++ b/Stockers/app/src/main/res/layout/activity_show_stock.xml
@@ -13,7 +13,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:paddingLeft="4dp">
+        android:paddingLeft="4dp"
+        style="@style/word_title">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,24 +25,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/companyName"/>
+            android:id="@+id/companyName"
+            android:layout_gravity="center" />
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/currentPrice"/>
+            android:id="@+id/currentPrice"
+            android:layout_gravity="center" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/currencyType"/>
+            android:id="@+id/stockExchange"
+            android:layout_gravity="center" />
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/stockExchange"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/show"
+            android:layout_gravity="bottom|end"/>
     </LinearLayout>
 </ScrollView>
 
