--- a/Stockers/app/src/main/res/layout/error_page.xml
+++ b/Stockers/app/src/main/res/layout/error_page.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/error_server"
         style="@style/text_style"/>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/error"
-        android:layout_gravity="center"/>
+        android:src="@drawable/error"/>
 </LinearLayout>
