--- a/Stockers/app/src/main/res/layout/activity_settings.xml
+++ b/Stockers/app/src/main/res/layout/activity_settings.xml
@@ -114,14 +114,23 @@
                 android:layout_marginTop="10dp"
                 android:onClick="saveInfo"
                 android:layout_gravity="center"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/date"
-                android:id="@+id/date"
-                android:paddingTop="5dp"
-                android:layout_gravity="center"/>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_date"
+        android:paddingTop="5dp"
+        android:layout_gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/date"
+        android:paddingTop="5dp"
+        android:layout_marginRight="4dp"
+        android:layout_gravity="center"/>
+</LinearLayout>
         </LinearLayout>
 </LinearLayout>
 </ScrollView>
