--- a/Stockers/app/src/main/res/layout/activity_about.xml
+++ b/Stockers/app/src/main/res/layout/activity_about.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".Menu.AboutActivity"
-    android:textSize="15sp"
-    android:layout_gravity="center"
     android:orientation="vertical">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,7 +57,6 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="@drawable/john"/>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -87,7 +85,6 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="@drawable/lara"/>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -116,7 +113,6 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="@drawable/nick"/>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -133,6 +129,7 @@
                         android:text="@string/about_nick_short"/>
                 </LinearLayout>
             </LinearLayout> <!-- end nicholas layout -->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -161,10 +158,6 @@
                         android:text="@string/about_danny_short"/>
                 </LinearLayout>
             </LinearLayout> <!-- end danny layout -->
-
-
         </LinearLayout> <!-- end dev list layout -->
-
-
     </LinearLayout> <!-- final layout -->
 </ScrollView>
