--- a/Stockers/app/src/main/res/layout/activity_note.xml
+++ b/Stockers/app/src/main/res/layout/activity_note.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Note">
+    tools:context=".Entity.Note">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
